--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="theme-color" content="#000000" /
+    <meta property="og:title" content="To Do app"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://mini-todo-list.netlify.app/"/>
+    <meta property="og:image" content="%PUBLIC_URL%/todo_screen.png"/>
+    <meta property="og:description" content="Get latest News on Front Page with easy navigation for searching through Articles. To found more about specific Article read Comments section." />
+    <meta name="author" content="Minja"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
