--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" /
-    <meta property="og:title" content="To Do app"/>
+    <meta property="og:title" content="To-do App"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://mini-todo-list.netlify.app/"/>
     <meta property="og:image" content="%PUBLIC_URL%/todo_screen.png"/>
-    <meta property="og:description" content="Get latest News on Front Page with easy navigation for searching through Articles. To found more about specific Article read Comments section." />
+    <meta property="og:description" content="First React App | To-do List with Voice recognition | Dark Mode" />
     <meta name="author" content="Minja"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
