--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://mini-todo-list.netlify.app/"/>
     <meta property="og:image" content="%PUBLIC_URL%/todo_screen.png"/>
-    <meta property="og:description" content="First React App | To-do List with Voice recognition | Dark Mode" />
+    <meta property="og:description" content="First app created with React.js | Voice recognition | Dark Mode" />
     <meta name="author" content="Minja"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
