--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" prefix="og: http://ogp.me/ns#>
+<html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" /
+    <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="To-do App"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://mini-todo-list.netlify.app/"/>
     <meta property="og:image" content="%PUBLIC_URL%/todo_screen.png"/>
-    <meta property="og:description" content="First app created with React.js | Voice recognition | Dark Mode" />
+    <meta property="og:description" content="First app created with React.js, to-do list with Voice recognition and for night owl Dark Mode" />
     <meta name="author" content="Minja"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
